WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276824
[JSC] Set PROC_SETPC_TERMINATE on iOS etc. too
https://bugs.webkit.org/show_bug.cgi?id=276824
Summary
[JSC] Set PROC_SETPC_TERMINATE on iOS etc. too
Yusuke Suzuki
Reported
2024-07-19 10:57:13 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-19 10:57:25 PDT
<
rdar://problem/132100174
>
Yusuke Suzuki
Comment 2
2024-07-19 10:59:08 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31010
EWS
Comment 3
2024-07-19 12:23:50 PDT
Committed
281144@main
(86ace25affbf): <
https://commits.webkit.org/281144@main
> Reviewed commits have been landed. Closing PR #31010 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug