[JSC] Set PROC_SETPC_TERMINATE on iOS etc. too https://bugs.webkit.org/show_bug.cgi?id=276824 rdar://132100174

Reviewed by Keith Miller.

There is no much reason why we do not set this on iOS too. We set this configuration on Darwin
so that xnu can kill JSC shell process when resource starvation occurs.

* Source/JavaScriptCore/jsc.cpp:
(main):

Canonical link: https://commits.webkit.org/281144@main